# SuperBible

./: .gitignore  CMakeLists.txt  README.md  Redbook.vcxproj  Redbook.vcxproj.filters  SuperBible.sln  todo.txt
bluebook/: ch2_2.cpp  test.cpp
bluebook/Chapter10/: Compute_Shader_Input_Outputs.cpp  Compute_Shader_Memory_Barrier.cpp  Flocking.cpp  Parallel_Prefix_Sum.cpp  Variable_Filtering.cpp
bluebook/Chapter11/: Bindless_Textures.cpp  High_Quality_Filtering.cpp  Sparse_Textures.cpp  Texture_Compression.cpp
bluebook/Chapter12/: Occlusion_Queries.cpp  Timer_Queries.cpp  Transform_Feedback_Queries.cpp
bluebook/Chapter13/: Bitmap_Fonts.cpp  Blinn_Phong.cpp  CubeMap.cpp  Deferred_Shading.cpp  Distance_Fields.cpp  Equirectangular_Enviroment_Maps.cpp  Fog.cpp  Gouraud_Shading.cpp  Julia_Fractals.cpp  Normal_Maps.cpp  Per_Pixel_Gloss.cpp  Phong_Shading.cpp  Ray_Tracing.cpp  Rim_Lighting.cpp  SSAO.cpp  ShadowMap2.cpp  Shadow_Mapping.cpp  Spherical_Enviroment_Mapping.cpp  Toon_Shader.cpp  Toon_Shader2.cpp
bluebook/Chapter14/: Cull_Indirect.cpp  Indirect_Material.cpp  OMP_Particles.cpp  OpenMP.cpp  PMB_Fractal.cpp  PMB_Streaming.cpp  Packet_Buffer.cpp
bluebook/Chapter2/: ch2_1.cpp  ch2_2.cpp  ch2_3.cpp
bluebook/Chapter3/: ch3_1.cpp  (+2 more)
headers/: Current_Project.h  Defines.h  GL_Helpers.h  Mesh.h  Model.h  PostProcess.h  Scene.h  System.h  Texture.h
resources/: Notes.txt  alpha_test.glb  cube.glb  displacement.ktx  face1.ktx  grass.glb  indirect_render_model.glb  instance_texture.ktx  node_children_test.glb  sphere_light.glb  test_scene_no_texture.glb  trees.ktx  tunnel.glb  two_planes.glb
shaders/: post_process_chroma_shift.frag  post_process_crt.frag  post_process_film_grain.frag  post_process_test.frag  post_process_vhs.frag  triangles.frag  triangles.vert
source/: GL_Helpers.cpp  Mesh.cpp  System.cpp  Texture.cpp  boilerplate_main.cpp
(+78 files in other folders)
